# robot_pipeline

./: .gitignore  README.md  TakeCalibrationReadings.ipynb  aha.py  calibrate.py  convertPrecomputed.py  executeJson.py  generate.py  gltf_obj.py  gltf_obj.sh  goToWorldOrigin.py  mesh_path_stub.py  pipeline.py  pipeline_cube.py  pipeline_cube_test28-03.py  pipeline_model_to_traj.py  pyproject.toml  readPrecomputed.py  takePicture.py  test.py  test_cube.py  test_transf.py  traj1.json  traj2.json  trajectory.json  valids.txt  wip.py
calibrations/: calibration_logitec.npz  calibration_logitec_new.npz  calibration_logitec_with_stand.npz  calibration_logitec_with_stand_old.npz
painting_models/cube_edge/: cube_8mm (1).mtl:Zone.Identifier  cube_8mm (1).obj:Zone.Identifier
painting_models/cube_isc_three_faces/: cube_8mm.mtl
painting_models/duck/: DuckComplete.mtl
painting_models/duck_demo_isc/: commands.txt
painting_models/duck_eyes_crown/: duck_isc.mtl
pre_generated_traj/: duck_front.npz  duck_head.npz  duck_reach.npz  duck_right_wing.npz  vertices_eye.npz
pre_generated_vertices/: blender_script.py  vertices_eye.csv  vertices_front.csv  vertices_head.csv  vertices_reach.csv  vertices_right_wing.csv
readings/: reading.csv  reading_old.csv  reading_old_logi.csv
trajectories/: _test_cube.json  duck_trajectory.json  home_traj.json  trajectory.json  trajectory_duck_front.json  trajectory_duck_front.json.json  trajectory_duck_head.json  trajectory_duck_head.json.json  trajectory_duck_right_wing.json.json  trajectory_vertices_eye.json
(+2 files in other folders)
