[project]
name = "robot-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "camera-sync",
    "duck-factory",
    "ikfast",
    "simulator",
    "tornado>=6.4.2",
    "urbasic",
]

[tool.uv.sources]
duck-factory = { git = "https://github.com/6figuress/DuckFactory.git", rev = "main" }
urbasic = { git = "https://github.com/6figuress/ur3e-control.git" }
ikfast = { git = "https://github.com/6figuress/ur3e-ik.git", rev = "main"}
camera-sync = { git = "https://github.com/6figuress/CameraCalibration.git" }
simulator = { git = "https://github.com/6figuress/phys_simulator.git", rev = "develop" }

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
]
